# routes/memo.js
@@ -1,7 +1,7 @@
 const express = require('express');
 const cors = require('cors');
 const {checkJwt} = require('../middlewares/index');
-const {memoList, memoItem, createMemo, updateMemo, deleteMemo} = require('../controllers/memo');
+const {memoList, memoItem, recentMemo, createMemo, updateMemo, deleteMemo} = require('../controllers/memo');
 //memoSingle, createMemo, updateMemo, deleteMemo
 const router = express.Router();
 
@@ -11,6 +11,8 @@ router.get('/memolist', checkJwt, memoList);
 
 //메모 정보 가져오기(/memo/memolist)
 router.get('/memolist/memoitem',checkJwt, memoItem);
+
+router.get('/recentmemo', checkJwt, recentMemo);
 
 //메모 정보 저장
 router.post('/creatememo',checkJwt, createMemo);
